--- a/faqihahbank_account.html
+++ b/faqihahbank_account.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bank Account</title>
     <link rel="stylesheet" href="style.css">
-    <script src="bank_account1.js"></script>
+    <script src="banking_system.js"></script>
 </head>
 <body>
-    <div class="container">
-        <h1>Bank Account Faqihah</h1>
-        <button onclick="addSaldo()">Tambah Saldo</button>
-        <button onclick="subtractSaldo()">Kurangi Saldo</button>
-    </div>
+
 </body>
 </html>
